Fixed issues with prompt commands on iphone and with rendering of json links
Fixes #5
Fixes #6

--- a/src/main.css
+++ b/src/main.css
@@ -49,6 +49,13 @@ button:active {
   box-shadow: 1px 1px 1px #333;
 }
 
+h1 {
+  font-size: 1em;
+}
+h4 {
+  font-size: .75em
+}
+
 /* Console and Prompt */
 .console-wrap{
   position:absolute;
@@ -79,6 +86,7 @@ button:active {
   left: 0;
 }
 .prompt-div {
+  position: relative;
   margin-left: 30px;
 }
 .output-line {
@@ -87,6 +95,12 @@ button:active {
   padding-left: 30px;
   width: 100%;
   position: relative;
+}
+#runPrompt {
+  position: absolute;
+  bottom: 2px;
+  right: 5px;
+  font-size: .6em;
 }
 .tab {
   width: 2em;
@@ -146,7 +160,7 @@ button:active {
 }
 .site-title{
   margin-top: 1em;
-  font-size: 1.5em;
+  font-size: 3.4vw;
   padding-left: .2em;
 }
 .float-box {
@@ -199,21 +213,18 @@ button:active {
 }
 
 /* Projects */
-.projects-logo {
-  height: 100px;
+.project-logo {
+  height: 50px;
   max-width: 100%;
+}
+.project .project-logo {
+  margin-bottom: 1em;
+}
+.projects .project-logo {
   margin-top: 2em;
 }
 .projects-link {
   text-align: center;
-}
-.project .project-logo-label {
-  display: inline-block;
-  vertical-align: top;
-  width: auto;
-}
-.project-logo {
-  height: 100px;
 }
 
 /* Community */
@@ -351,13 +362,35 @@ button:active {
 }
 
 /* Media Queries */
+/* sm */
+@media only screen and (min-width: 48em) {
+  .project-logo-label {
+    font-size: .75em;
+  }
+  .project-logo {
+    height: 75px;
+  }
+  h1 {
+    font-size: 1.5em;
+  }
+  h4 {
+    font-size: .9em;
+  }
+}
+/* md */
 @media only screen and (min-width: 62em) {
-  .site-title {
+  h1 {
     font-size: 2em;
+  }
+  h4 {
+    font-size: 1em;
   }
   .initials {
     font-size: 7em;
     margin-left: -.1em;
+  }
+  .project-logo {
+    height: 100px
   }
   .first-name {
     font-size: 4em
@@ -369,15 +402,18 @@ button:active {
     margin-top: .7em;
     margin-bottom: .7em;
   }
+  .project-logo-label {
+    font-size: .95em;
+  }
   .resume .work-history {
     flex-basis: calc( 58.333% - 1px );
     max-width: calc( 58.333% - 1px );
   }
 }
-
+/* lg */
 @media only screen and (min-width: 75em) {
-  .site-title {
-    font-size: 3em;
+  h1 {
+    font-size: 2em;
   }
   .col-lg-2 {
     max-width: 16.666%;
@@ -396,4 +432,3 @@ button:active {
     max-width: calc( 58.333% - 1px );
   }
 }
-
